--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.1.0",
     "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.5",
     "validator": "^13.11.0"
